stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Create':
CircularBuffer.c:22:16: error: returning 'int' from a function with return type 'struct CircularBuffer *' makes pointer from integer without a cast [-Werror=int-conversion]
   22 |     return self->capacity;
      |            ~~~~^~~~~~~~~~
compilation terminated due to -Wfatal-errors.
cc1: all warnings being treated as errors
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
